# jservice_questions

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt  start-reload.sh
alembic/versions/: 3ee8596e1d21_first_migration.py  6e7d25e184bc_first_init.py  e78f897ea69f_timestamp.py
app/: exceptions.py  main.py
app/api/: depends.py  question.py  routers.py
app/api/endpoints/: __init__.py  question.py
app/core/: base.py  config.py  db.py
app/crud/: __init__.py  base.py  question.py
app/models/: __init__.py  question.py
app/schemas/: __init__.py  question.py
app/services/: parse_jservice.py
tests/: conftest.py  test_charity_project.py  test_db.py
